Fixed issue with overflow in kmom03

--- a/htdocs/css/kmom03.css
+++ b/htdocs/css/kmom03.css
@@ -4553,17 +4553,9 @@ a.rm-button.rm-clicked .rm-button-face-2 {
  * Base style to affect HTML elements on a general scale.
  */
 html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
   background-color: #f2efe9;
 }
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
   font: 18px/1.33333333 futura-pt, sans-serif;
 }
 .outer-wrap-main {
@@ -5026,6 +5018,11 @@ html.hgrid .inner-wrap {
   margin-left: 0.52083333%;
   margin-right: 0.52083333%;
 }
+.region-flash,
+.inner-wrap-flash .row {
+  margin: 0;
+  width: 100%;
+}
 /* ---------- Main content ---------- */
 .region-main {
   display: inline;
@@ -5279,7 +5276,7 @@ html.hgrid .inner-wrap {
 .figure.me {
   height: 600px;
   width: auto;
-  overflow: auto;
+  overflow: hidden;
 }
 /* ---------- Flashmessage ---------- */
 .flashmessage {
