--- a/theme/src/layout/design_kmom03.less
+++ b/theme/src/layout/design_kmom03.less
@@ -177,7 +177,7 @@
 .figure.me {
     height: 600px;
     width: auto;
-    overflow: auto;
+    overflow: hidden;
 }
 
 
