--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -66,6 +66,12 @@
     #desinax-vgrid.column(@columns);
 }
 
+.region-flash,
+.inner-wrap-flash .row {
+    margin: 0;
+    width: 100%;
+}
+
 
 /* ---------- Main content ---------- */
 .region-main {
